--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  animated_splash_screen: ^1.3.0
+  transition: ^2.0.2
 
 dev_dependencies:
   flutter_test:
