--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  animated_splash_screen: ^1.3.0
+  flutter_native_splash: ^2.2.16
   transition: ^2.0.2
 
 dev_dependencies:
